# quickjs-wz

./: CMakeLists.txt  README.md  cutils.c  cutils.h  libbf.c  libregexp.c  quickjs-limitedcontext.c  quickjs-limitedcontext.h  quickjs.c  quickjs.h
.github/workflows/: cmake-multi-platform.yml
patches/: 001-add-extensions.patch  002-add-disable-atomics-define.patch  003-fix-pedantic-cxx-warnings.patch  003-freeruntime2.patch  003-msvc-compatibility.patch  004-local-math-wrappers.patch  004-msvc-compatibility.patch  005-msvc-compatibility-64bit.patch  005-msvc-compatibility.patch  006-msvc-64bit-compatibility.patch  006-msvc-compatibility-2.patch  006-msvc-compatibility-pt3.patch  007-fix-dtoa-includes.patch  007-freeruntime2.patch  008-bsd-compile-fixes.patch  008-freeruntime2.patch  009-asan-compatibility.patch  009-bsd-compile-fixes.patch  010-asan-compatibility.patch  010-win32-gmtime-nullcheck.patch  011-fix-compile-without-bignum.patch  011-fix-stack-overflow.patch  012-workaround-emscripten-webkit.patch  apply_quickjs_patches.cmake
quickjs/: cutils.c  cutils.h  dtoa.c  quickjs.c  quickjs.h
quickjs-ng/: quickjs.c  quickjs.h
quickjs-wz-extensions/: quickjs-debugger.c  quickjs-limitedcontext.c  quickjs-limitedcontext.h
